--- a/template.ejs
+++ b/template.ejs
@@ -2,6 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <style>* { margin: 0; padding: 0; box-sizing: border-box }</style>
 </head>
   <body>
     <% if (htmlWebpackPlugin.options.appMountId) { %>
