Fix API call (add realtime translation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
-    <script src="src/App.js"></script>
+    <script src="translator.js"></script>
 
   </head>
   <body>
@@ -29,14 +29,10 @@
             <textarea id="input" class="textarea" placeholder="Enter text"></textarea>
           </div>
           <div class="boxRight">
-            <div><p class="selectR">English<img src="images/linkarrow.png"></p></div>
+            <div><p class="selectR">Spanish<img src="images/linkarrow.png"></p></div>
             <textarea id="output" class="textarea"></textarea>
           </div>
         </div>
-        <br></br>
-        <form>
-          <button class="submit" id="submit">Translate</button>
-        </form>
       </div>
     </div>
   </body>
