Add To-Do list to README Remove menu arrow from icon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,10 +18,10 @@
         <p>Michaels IBM Watson Interface</p>
       </div>
 
-      <div class="ioGroup">
-        <div class="headholder">
+      <div class="inputOutputGroup">
+        <div class="headHolder">
           <img class="heads" src="images/headscropped.png">
-          <img class="arrow" src="images/linkarrow.png">
+          <!-- <img class="arrow" src="images/linkarrow.png"> -->
         </div>
         <div class="inputOutputHolder">
           <div class="boxLeft">
