--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <p>Michaels IBM Watson Interface</p>
+        <p>Michael's IBM Watson Interface</p>
       </div>
 
       <div class="inputOutputGroup">
@@ -25,11 +25,24 @@
         </div>
         <div class="inputOutputHolder">
           <div class="boxLeft">
-            <div><p class="select">English<img src="images/linkarrow.png"></p></div>
+            <div class="selectBox">
+              <select id="inputSelect">
+                <option value="en">English</option>
+                <option value="fr">French</option>
+                <option value="es">Spanish</option>
+              </select>
+            </div>
+
             <textarea id="input" class="textarea" placeholder="Enter text"></textarea>
           </div>
           <div class="boxRight">
-            <div><p class="selectR">Spanish<img src="images/linkarrow.png"></p></div>
+            <div class="selectBox">
+              <select id="outputSelect">
+                <option value="en">English</option>
+                <option value="fr">French</option>
+                <option value="es">Spanish</option>
+              </select>
+            </div>
             <textarea id="output" class="textarea"></textarea>
           </div>
         </div>
