--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
+      <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:300" rel="stylesheet">
     <script src="translator.js"></script>
   </head>
   <body>
