--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* font-family: sans-serif; */
   font-family: 'IBM Plex Sans Condensed', sans-serif;
   font-weight: 300;
 }
@@ -51,15 +50,23 @@
   flex-direction: row;
   width: 600px;
   height: 300px;
-  border-radius: 3px;
-  box-shadow: 0px 2px 4px 2px rgba(00,00,00,0.18);
+  /* border-radius: 3px; */
+  /* box-shadow: 0px 2px 4px 2px rgba(00,00,00,0.18); */
+  border: 2px solid #88C7E2;
+  caret-color: #88C7E2;
   color: #3C89AA;
+
+  caret
 }
+
+
 
 .boxLeft {
   width: 300px;
   padding: 15px;
-  border-right: 1px solid #DDD;
+  border-right: 2px solid #88C7E2;
+
+  /* border-right: 1px solid #DDD; */
 }
 
 .boxRight {
