--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,8 @@
   width: 100%;
   background-color: #88C7E2;
   padding: 10px;
+  box-shadow: 0px 2px 4px rgba(00,00,00,0.15);
+
 }
 .header p {
   font-weight: 300;
@@ -51,7 +53,7 @@
   width: 600px;
   height: 300px;
   /* border-radius: 3px; */
-  /* box-shadow: 0px 2px 4px 2px rgba(00,00,00,0.18); */
+  box-shadow: 0px 2px 4px rgba(00,00,00,0.15);
   border: 2px solid #88C7E2;
   caret-color: #88C7E2;
   color: #3C89AA;
