--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Non-React IBM Watson</title>
+    <title>Michael's Simple Translator</title>
     <style>* { margin: 0; padding: 0; box-sizing: border-box }</style>
     <link rel="stylesheet" href="css/styles.css">
     <script
