--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <p>Michael's Simple Translator</p><p id="headerRight">Powered by IBM Watson</p>
+        <p>Michael's Simple Translator</p><p id="headerRight">Powered by <a href="https://www.ibm.com/watson/" target="_blank">IBM Watson</a></p>
       </div>
       <div class="inputOutputGroup">
         <div class="headHolder">
