--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
+/* Reset & universal */
+
+* {
+  margin: 0; padding: 0; box-sizing: border-box
+}
+
 .container {
   padding: 0px;
   margin: 0px;
@@ -25,15 +31,12 @@
 
 }
 .header a {
-  /* color: #B7E1F3; */
   color: inherit;
   text-decoration: none;
   border-bottom: 2px solid #B7E1F3;
 }
 .header a:hover {
   border-bottom: 2px solid white;
-  /* color: #B7E1F3; */
-
 }
 .header p {
   font-weight: 300;
@@ -45,7 +48,7 @@
 }
 
 
-/* Input/Out block: */
+/* Input/Output block: */
 
 .inputOutputGroup {
   display: flex;
@@ -70,13 +73,10 @@
   color: #3C89AA;
 }
 
-
-
 .boxLeft {
   width: 300px;
   padding: 15px;
   border-right: 2px solid #88C7E2;
-  /* border-right: 1px solid #DDD; */
 }
 
 .boxRight {
@@ -116,7 +116,6 @@
   background: url('../images/linkarrow.png') no-repeat right;
 }
 
-
 .selectBox select {
   appearance: none;
   -webkit-appearance: none;
@@ -137,7 +136,6 @@
   color: #B7E1F3;
 }
 
-
 .clipboard {
   height: 30px;
   float: right;
@@ -152,7 +150,6 @@
   color: #B7E1F3;
   height: 20px;
   transform: translate(250px,-275px);
-
 }
 
 .visible {
