--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Michael's Simple Translator</title>
-    <style>* { margin: 0; padding: 0; box-sizing: border-box }</style>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico?" type="image/png">
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -44,7 +44,6 @@
                 <option value="ja">Japanese</option>
                 <option value="ko">Korean</option>
                 <option value="es">Spanish</option>
-
               </select>
             </div>
           </div>
