--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,10 +34,13 @@
   color: inherit;
   text-decoration: none;
   border-bottom: 2px solid #B7E1F3;
+  transition: all ease-in-out 150ms;
+
 }
 .header a:hover {
   border-bottom: 2px solid white;
 }
+
 .header p {
   font-weight: 300;
   font-size: 24px;
