--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -179,6 +179,28 @@
     display: none;
   }
 
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 0px;
+    height: 150px;
+    width: 100%;
+    background-color: #88C7E2;
+    padding: 10px;
+    box-shadow: 0px 2px 4px rgba(00,00,00,0.15);
+  }
+  .header p {
+    font-size: 50px;
+  }
+  #headerRight {
+    font-size: 30px;
+  }
+
+  .textarea {
+    font-size: 100px;
+  }
+
   .inputOutputHolder {
     display: flex;
     flex-direction: column;
@@ -190,13 +212,18 @@
     color: #3C89AA;
   }
 
+  .selectBox {
+    width: 200px;
+  }
+  .selectBox select {
+    font-size: 40px;
+    width: 200px;
+  }
 
   .boxLeft, .boxRight {
     border-bottom: 2px solid #88C7E2;
     width: 100vw;
-    /* height: 50vh; */
-    height: calc(50vh - 30px);
-
+    height: calc(50vh - 75px);
     padding: 15px;
     /* border-right: 2px solid #88C7E2; */
   }
